create github pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 .engine{position: absolute;text-indent: -2400px;text-align: center;padding: 0;top: 0;left: -2400px;}[class*="-iconfont"]{display: inline-flex;}</style>
  
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
   <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -128,7 +129,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             </div>
 
             <div class="mbr-figure">
-                <amp-img src="assets/images/unnamed-1-238x328.jpeg" layout="responsive" width="416.96860986547085" height="472" alt="Mobirise" class="mobirise-loader">
+                <amp-img src="assets/images/unnamed-1-238x328.jpeg" layout="responsive" width="391.3497757847534" height="443" alt="Mobirise" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -148,13 +149,13 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
     
     <div class="container">
-        <h2 class="align-center mbr-fonts-style mbr-section-title display-2"></h2>
+        <h2 class="align-center mbr-fonts-style mbr-section-title display-2">Contact<br></h2>
         <h3 class="mbr-section-subtitle align-center mbr-fonts-style display-6">
-            Find Us Or Contact Us if you have any inquiries</h3>
+            Find us or contact us if you have any inquiries</h3>
 
         <div class="mbr-row mbr-justify-content-center main-row">
             <div class="mbr-col-lg-8 mbr-col-md-12 map-box">
-                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJ90260rVG1moRkM2MIXVWBAQ" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
+                <div class="google-map"><amp-iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJ90260rVG1moRkM2MIXVWBAQ" height="400" layout="fill" sandbox="allow-scripts allow-same-origin                                 allow-popups" frameborder="0" class="mobirise-loader">
                     <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -168,7 +169,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="mbr-col-lg-4 mbr-col-md-12 form-content" data-form-type="formoid">
                 <div class="mbr-row">
                     <div class="mbr-col-lg-12 mbr-col-md-12" data-form-type="formoid">
-                        <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form" id="myFormform3u" on="submit:myFormform3u.clear;submit-success:AMP.setState({myStateform3u:{formdata11form3u:{stateformdata11form3u: '', valueformdata11form3u: ''}, formdata01form3u:{stateformdata01form3u: '', valueformdata01form3u: ''}, formdata31form3u:{stateformdata31form3u: '', valueformdata31form3u: ''}}});submit-error:AMP.setState({myStateform3u:{formdata11form3u:{stateformdata11form3u: myStateform3u.formdata11form3u.valueformdata11form3u}, formdata01form3u:{stateformdata01form3u: myStateform3u.formdata01form3u.valueformdata01form3u}, formdata31form3u:{stateformdata31form3u: myStateform3u.formdata31form3u.valueformdata31form3u}}})"><amp-state id="myStateform3u"><script type="application/json"> {"formdata11form3u":{ "stateformdata11form3u": "", "valueformdata11form3u": ""},"formdata01form3u":{ "stateformdata01form3u": "", "valueformdata01form3u": ""},"formdata31form3u":{ "stateformdata31form3u": "", "valueformdata31form3u": ""}}</script></amp-state><input type="hidden" name="email" data-form-email="true" value="px5Yz109KWFV5Rl7BV91WYL6SS7+UvURfgEDFXHLfZgBlSXRDbs0mX5dUmhswMcOgB0RcQmKQMuVqH/NNqRBJWy8bx4cECDoqpeLlBDLIPP2mDD0viUI4QkzSN3SnPG2.F7dPe5u1/RdkMhy7U1dL0mb5uGGMcIMkngjkLcwi0WVOSiXkkob7CsxJpqlwgYCAYxCMoQtPU75y8Fl6BqWGHhNS/stsaacn2LAc+HOWkaCuSguUQFvlST94QQP54fDj">
+                        <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form" id="myFormform3u" on="submit:myFormform3u.clear;submit-success:AMP.setState({myStateform3u:{formdata11form3u:{stateformdata11form3u: '', valueformdata11form3u: ''}, formdata01form3u:{stateformdata01form3u: '', valueformdata01form3u: ''}, formdata31form3u:{stateformdata31form3u: '', valueformdata31form3u: ''}}});submit-error:AMP.setState({myStateform3u:{formdata11form3u:{stateformdata11form3u: myStateform3u.formdata11form3u.valueformdata11form3u}, formdata01form3u:{stateformdata01form3u: myStateform3u.formdata01form3u.valueformdata01form3u}, formdata31form3u:{stateformdata31form3u: myStateform3u.formdata31form3u.valueformdata31form3u}}})"><amp-state id="myStateform3u"><script type="application/json"> {"formdata11form3u":{ "stateformdata11form3u": "", "valueformdata11form3u": ""},"formdata01form3u":{ "stateformdata01form3u": "", "valueformdata01form3u": ""},"formdata31form3u":{ "stateformdata31form3u": "", "valueformdata31form3u": ""}}</script></amp-state><input type="hidden" name="email" data-form-email="true" value="7BEBfyFs5PwbVt0pJKT9yFl+IwhCQQxdfLd42QFdCpzT3GmHQkoSCiKxi2BXCJz7GB3IdEnvztZF98e7TOh23duWdMSj+gjHLTQ19fGZRRKKOzAOZ5tjHQQcyEZJhmNF.o6hjKwGFM5yRwEm6jifk67/2NCLYbeXBHeCWZyB6v7xoXjvc8W3eiFiZkfxAmaVYIB91iKG7H9KP7DuzCB5Ws5E0VjyhZVhbvyxhJBcMkxP8z4uHGLnQpTIHI9Y0Hej3">
                             <div class="mbr-row">
                               <div submit-success="" class="mbr-col-sm-12 mbr-col-md-12">
                                   <template data-form-alert="" type="amp-mustache">Thank you for contacting us! We will get to you very soon!</template>
